--- a/movie-project.html
+++ b/movie-project.html
@@ -5,6 +5,7 @@
     <title>Movie Project</title>
 </head>
 <body>
-<p>sup</p>
+<div id="outputForMovies"></div>
+<script src="movie-project.js"></script>
 </body>
 </html>
