--- a/movie-project.html
+++ b/movie-project.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<form>
+<form id="form1">
     <div class="form-group">
         <label for="title">Title</label>
         <input type="text" class="form-control" id="title" placeholder="Enter Movie Title">
