--- a/movie-project.html
+++ b/movie-project.html
@@ -68,5 +68,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script src="movie-project.js"></script>
+<script src="keys.js"></script>
 </body>
 </html>
