added delete button

--- a/movie-project.html
+++ b/movie-project.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Movie Project</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="movie-project.css">
 </head>
 <body>
 
@@ -41,13 +42,15 @@
 </form>
 
 
-<form action="/delete" method="POST">
-    <input type="hidden" name="_method" value="DELETE" />
-    <input type="hidden" name="_token" value="{{$title}}">
-    <input type="submit" value="Delete">
-</form>
 
-<div id="outputForMovies"></div>
+
+<div id="outputForMovies" class="container text-center d-flex">
+    <div class="row">
+        <div class="col"></div>
+<div id="deleteButton"></div>
+
+    </div>
+</div>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
