fixed cards and center cards with margin

--- a/movie-project.html
+++ b/movie-project.html
@@ -43,7 +43,7 @@
 
 
 
-
+            <!-- This outputs our cards Movies                -->
 <div id="outputForMovies" class="container text-center d-flex">
     <div class="row">
         <div class="col"></div>
