added bg video and adjusted card size

--- a/movie-project.html
+++ b/movie-project.html
@@ -46,12 +46,18 @@
             <!-- This outputs our cards Movies                -->
 <div id="outputForMovies" class="container text-center d-flex">
     <div class="row">
-        <div class="col"></div>
+        <div class="col "></div>
 <div id="deleteButton"></div>
 
     </div>
 </div>
 
+
+
+
+<video autoplay muted loop class="star-background">
+    <source src="img/pexels-helder-sato-8443332.mp4">
+</video>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script src="keys.js"></script>
