--- a/movie-project.html
+++ b/movie-project.html
@@ -33,6 +33,49 @@
 <br>
 <br>
 <br>
+
+<!-- side nav bar-->
+<div id="mySidebar" class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <!--     Forms -->
+    <form id="form1">
+        <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" class="form-control" id="title" placeholder="Enter Movie Title">
+        </div>
+        <div class="form-group">
+            <label for="rating">Rating</label>
+            <select class="form-control" id="rating">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+            </select>
+            <label for="genre">Genre</label><br>
+            <select id="genre">
+                <option>Comedy</option>
+                <option>Action</option>
+                <option>Sci-fi</option>
+                <option>Horror</option>
+            </select>
+
+        </div>
+        <div class="form-group">
+            <label for="plot">Plot</label>
+            <textarea class="form-control" id="plot" rows="3"></textarea>
+        </div>
+        <input id="submit2" type="submit">
+
+    </form>
+    <!--End of form -->
+</div>
+
+<div id="main">
+    <button class="openbtn" onclick="openNav()">&#9776; Add A Movie</button>
+</div>
+<!--end of side bar-->
+
             <!-- This outputs our cards Movies                -->
 <div id="outputForMovies" class="container text-center d-flex">
     <div class="row">
@@ -42,38 +85,7 @@
     </div>
 </div>
 
-                    <!--     Forms -->
-<form id="form1">
-    <div class="form-group">
-        <label for="title">Title</label>
-        <input type="text" class="form-control" id="title" placeholder="Enter Movie Title">
-    </div>
-    <div class="form-group">
-        <label for="rating">Rating</label>
-        <select class="form-control" id="rating">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-        </select>
-        <label for="genre">Genre</label><br>
-        <select id="genre">
-            <option>Comedy</option>
-            <option>Action</option>
-            <option>Sci-fi</option>
-            <option>Horror</option>
-        </select>
 
-    </div>
-    <div class="form-group">
-        <label for="plot">Plot</label>
-        <textarea class="form-control" id="plot" rows="3"></textarea>
-    </div>
-    <input id="submit2" type="submit">
-
-</form>
-                        <!--End of form -->
 
                     <!-- Background video                       -->
 <video autoplay muted loop class="star-background">
