--- a/movie-project.html
+++ b/movie-project.html
@@ -9,7 +9,8 @@
 <body>
 
 <!--Nav bar-->
-<!--<nav class="navbar navbar-expand-lg navbar-light bg-light">-->
+<nav class="navbar">
+    <img class="nav-img" src="img/Project-M-logos_white.png" alt="">
 <!--    <a class="navbar-brand" href="#">Netflax</a>-->
 <!--    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
 <!--        <span class="navbar-toggler-icon"></span>-->
@@ -28,7 +29,7 @@
 
 <!--        </ul>-->
 <!--    </div>-->
-<!--</nav>-->
+</nav>
 <!--end of nav bar-->
 <br>
 <br>
