--- a/movie-project.html
+++ b/movie-project.html
@@ -26,11 +26,11 @@
 
                               <!--     Forms -->
     <form id="form1">
-        <div class="form-group">
+        <div class="form-group text-center">
             <label for="title">Title</label>
             <input type="text" class="form-control" id="title" placeholder="Enter Movie Title">
         </div>
-        <div class="form-group">
+        <div class="form-group text-center mt-3">
             <label for="rating">Rating</label>
             <select class="form-control" id="rating">
                 <option>1</option>
@@ -39,7 +39,7 @@
                 <option>4</option>
                 <option>5</option>
             </select>
-            <label for="genre">Genre</label><br>
+            <label for="genre" class="mt-3">Genre</label><br>
             <select id="genre">
                 <option>Comedy</option>
                 <option>Action</option>
@@ -48,12 +48,13 @@
             </select>
 
         </div>
-        <div class="form-group">
+        <div class="form-group text-center mt-3">
             <label for="plot">Plot</label>
             <textarea class="form-control" id="plot" rows="3"></textarea>
         </div>
-        <input id="submit2" type="submit">
-
+        <div class="d-flex justify-content-center">
+        <input id="submit2" class="mt-5" type="submit">
+        </div>
     </form>
     <!--End of form -->
 </div>
