added notes for demos

--- a/movie-project.html
+++ b/movie-project.html
@@ -16,11 +16,9 @@
     <img class="nav-img" src="img/Project-M-logos_white.png" alt="">
 </nav>
 <!--end of nav bar-->
-<br>
-<br>
-<br>
 
-                            <!-- side nav bar-->
+
+                            <!-- side nav bar, form is inside side nav-->
 <div id="mySidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
