--- a/movie-project.html
+++ b/movie-project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Movie Project</title>
-                            <!--    Bootstrap-->
+                            <!--    Bootstrap link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
                                   <!--    favicon-->
     <link rel="icon" type="image/x-icon" href="img/786973.png">
